force-app/main/default/objects/Safe_Deposit_Log__c/Safe_Deposit_Log__c.object-meta.xml
<CustomObject>
    <label>Safe Deposit Box Log</label>
    <nameField>
        <displayFormat>SDL-{000000000}</displayFormat>
        <label>Safe Deposit Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safe Deposit Box Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>