force-app/main/default/objects/Safe_Deposit_Log__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF( Account__r.IsPersonAccount = true, Account__r.FirstName &amp;&quot; &quot;&amp;  Account__r.LastName ,  Account__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>