force-app/main/default/objects/Safe_Deposit_Log__c/fields/Additional_Names__c.field-meta.xml
<CustomField>
    <fullName>Additional_Names__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Name(s)</label>
    <type>TextArea</type>
</CustomField>