force-app/main/default/objects/Safe_Deposit_Log__c/fields/Entry_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Entry Date/Time</label>
    <type>DateTime</type>
</CustomField>