force-app/main/default/objects/Safe_Deposit_Log__c/fields/Exit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Exit_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exit Date/Time</label>
    <type>DateTime</type>
</CustomField>