force-app/main/default/objects/Safe_Deposit_Log__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <label>Financial Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FinServ__FinancialAccount__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Deposit Products</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Safe Deposit Box Logs</relationshipLabel>
    <relationshipName>Safe_Deposit_Logs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>