force-app/main/default/objects/Safe_Deposit_Log__c/fields/Financial_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Name__c</fullName>
    <formula>Financial_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Account Name</label>
    <type>Text</type>
</CustomField>